changed font size to prevent overlapping

--- a/tickets.css
+++ b/tickets.css
@@ -181,13 +181,13 @@ html {
 	transform: rotate(180deg);
 }
 .check-card .check-card-cancel {
-	font-size: 18px;
+	font-size: 15px;
 	border-top: solid 1px #fff;
 	border-bottom: solid 1px #fff;
 	padding: 10px 0 7px;
 	text-align: center;
 	position: absolute;
-	bottom: -0px;
+	bottom: 3px;
 	margin: -20% 7%;
 	width: 86%;
 	-webkit-transition: all .3s cubic-bezier(0.5, -0.8, 0.5, 1.8);
